--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Push to GHCR
+name: Deploy JSONHero to Azure
 
 on:
   push:
@@ -7,12 +7,10 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
@@ -20,9 +18,21 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build + Push container
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}/jsonhero-web:latest
+          tags: ghcr.io/${{ github.repository_owner }}/jsonhero:latest
+
+  restart-azure:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Restart container app
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: "jsonhero-demo"
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: ghcr.io/${{ github.repository_owner }}/jsonhero:latest
