--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build + Push container
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/jsonhero:latest
+          tags: ghcr.io/chtbgh/almaconf/jsonhero-web:latest
+          build-args: |
+            SESSION_SECRET=${{ secrets.SESSION_SECRET }}
 
   restart-azure:
     needs: build-and-push
