--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/chtbgh/almaconf/jsonhero-web:latest
+          tags: ghcr.io/chtbgh/almaconf/almaconf:latest
           build-args: |
             SESSION_SECRET=${{ secrets.SESSION_SECRET }}
 
@@ -36,4 +36,4 @@ jobs:
         with:
           app-name: "jsonhero-demo"
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: ghcr.io/${{ github.repository_owner }}/jsonhero:latest
+          images: ghcr.io/${{ github.repository_owner }}/almaconf:latest
